fix:deprecated된 생성자 제거